--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,3 +48,4 @@ services:
       - ELASTICSEARCH_HOST=elasticsearch
       - REDIS_HOST=redis
       - REDIS_AUTH=PLEASE_CHANGE_ME
+      - SCHEMA='./schema.json'
